--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html"> 
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <label for="firstname">Your First Name<span class="required-field">*</span></label>
+                <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35" required>
                 
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="lastname">Your Last Name<span class="required-field">*</span></label>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
+
+                <label for="age">Your Age<span class="required-field">*</span></label>
+                <input type="number" id="age" name="age" min="21" max="120" required>
+                <h5>Must be at least 21 to enter the constest</h5>
             </div>
 
             <fieldset>
                 <legend>Your Contact Info</legend>
-                <label for="email">Your Email</label>
+                <label for="email">Your Email<span class="required-field">*</span></label>
                 <input type="text" id="email" name="email">
                 <label for="address">Address</label>
                 <input type="text" id="address" name="address">
@@ -82,7 +86,7 @@
                     <option value="WY">Wyoming</option>
                 </select>
                 <label for="zip">Zip Code</label>
-                <input type="text" id="zip" name="zip">
+                <input type="text" id="zip" name="zip" pattern="[0-9]{5}">
             </fieldset>
  
             <fieldset>
